build/apps/whoami/base/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-frontend
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: whoami-frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: whoami-frontend
        task: whoami-frontend
    spec:
      containers:
        - image: traefik/whoami
          imagePullPolicy: IfNotPresent
          name: whoami
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
