build/apps/whoami/base/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-frontend
spec:
  externalName: 192.168.40.12
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/instance: traefik
    task: whoami-frontend
  type: ExternalName
