build/apps/whoami/base/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  labels:
    app.kubernetes.io/name: whoami
    app: whoami
    name: whoami

  annotations:
    cert-manager.io/cluster-issuer: route53-letsencrypt-production
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    #traefik.ingress.kubernetes.io/router.middlewares: traefik-chain-basic-auth@kubernetescrd
    traefik.ingress.kubernetes.io/router.middlewares: traefik-headers@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls.options: traefik-tls-ver13@kubernetescrd
    
    #argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "4"

spec:
  #ingressClassName: traefik-external 
  rules:
    - host: whoami.dev.anotherlife.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
  tls:
  - hosts:
    - whoami.dev.anotherlife.pl
    secretName: whoami.dev.letsencrypt-production
